# aws-lambdas-cicd-poc

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: tpl_go_deploy.yml  tpl_go_validation.yml  tpl_javascript_deploy.yml  tpl_javascript_validation.yml  tpl_lambda_deploy.yml  tpl_python_deploy.yml  tpl_python_validation.yml  wfl_lambdas_release.yml  wfl_pr_validation.yml
docs/: lambda-execution-role-setup.md  lambda-multi-region.md  ssl-handshake-failure.md
lambdas/go/: .golangci.yaml  Dockerfile
lambdas/go/go_1_example/: Dockerfile  go.mod  lambda-config.yaml  main.go  main_test.go
lambdas/go/go_2_example/: go.mod  lambda-config.yaml  main.go
lambdas/javascript/: .eslintrc.json  Dockerfile
lambdas/javascript/javascript_1_example/: index.js  index.test.js  lambda-config.yaml  package-lock.json
lambdas/javascript/javascript_2_example/: index.js  lambda-config.yaml  package-lock.json  package.json
lambdas/python/: Dockerfile  pyproject.toml
lambdas/python/python_1_example/: Dockerfile  lambda-config.yaml  lambda_function.py
lambdas/python/python_2_example/: Dockerfile  lambda-config.yaml  lambda_function.py  requirements.txt  test_lambda_function.py
scripts/: README.md  determine-docker-platform.sh  ecr-copy-image-to-region.sh  ecr-ensure-repo.sh  ecr-lifecycle-policy.json  parse-lambda-config.sh  resolve-deploy-regions.sh
